feat: initial working implementation of GigaChat tokenizer starter